grammar.js
    source_file: $ => seq(
      optional("HA"),
      optional($.export_header),
      choice(
        $.class_file,
        $.structure_file,
        $.function_file,
      ),
    ),

    class_file: $ => seq(
      $.forward_declaration_section,
      repeat($.structure_definition),
      optional($.shared_variables_section),
      optional($.global_variables_section),
      $.class_type_definition,
      optional($.global_var_declaration),
      optional($.external_function_prototypes),
      optional($.instance_variables_section),
      optional($.forward_function_prototypes),
      repeat(choice(
        $.event_definition,
        $.function_definition,
        $.on_event_definition,
      )),
      repeat($.inner_class_type_definition),
    ),

    forward_declaration_section: $ => seq(
      alias($.forward_keyword, $.forward_declaration_statement),
      $.forward_declaration_statement_body,
      $.forward_declaration_statement_end,
    ),

    forward_declaration_statement_body: $ => seq(
      repeat1($.class_type_definition),
      repeat($.global_variable_declaration),
    ),

    class_type_definition: $ => seq(
      $.class_type_definition_statement,
      optional($.class_type_definition_statement_body),
      $.end_type_declaration_statement,
    ),

    class_type_definition_statement: $ => seq(
      optional($.global_keyword),
      $.type_keyword,
      alias($.identifier, $.class_type_name),
      $.from_keyword,
      alias($.identifier, $.ancenstor_type_name),
      optional($.autoinstantiate_keyword),
      optional(seq(
        $.within_keyword,
        alias($.identifier, $.parent_class),
        optional(seq(
          $.descriptor_keyword,
          alias($.string_literal, $.descriptor_type),
          "=",
          alias($.string_literal, $.descriptor_value),
        )),
      )),
    ),

    class_type_definition_statement_body: $ => repeat1(choice(
      $.event_declaration,
      alias($.local_variable_declaration, $.inner_class_variable_declaration),
    )),

    forward_declaration_statement_end: $ => seq(
      $.end_keyword,
      $.forward_keyword,
    ),

    shared_variables_section: $ => seq(
      $.shared_variables_section_statement,
      optional($.shared_variables_section_body),
      $.end_variables_section,
    ),

    shared_variables_section_statement: $ => seq(
      $.shared_keyword,
      $.variables_keyword,
    ),

    shared_variables_section_body: $ => repeat1($.local_variable_declaration),

    end_variables_section: $ => seq(
      $.end_keyword,
      $.variables_keyword,
    ),

    global_variables_section: $ => seq(
      $.global_variables_section_statement,
      optional($.global_variables_section_body),
      $.end_variables_section,
    ),

    global_variables_section_statement: $ => seq(
      $.global_keyword,
      $.variables_keyword,
    ),

    global_variables_section_body: $ => repeat1($.local_variable_declaration),

    global_var_declaration: $ => seq(
      $.global_keyword,
      $.type,
      alias($.identifier, $.global_variable_name),
    ),

    external_function_prototypes: $ => seq(
      $.external_function_prototypes_statement,
      repeat($.external_function_prototype),
      $.end_function_prototypes_statement,
    ),

    external_function_prototypes_statement: $ => seq(
      $.type_keyword,
      $.prototypes_keyword,
    ),

    external_function_prototype: $ => seq(
      $.function_prototype,
      $.library_keyword,
      alias($.string_literal, $.library_name),
      optional(seq(
        $.alias_keyword,
        $.for_keyword,
        alias($.string_literal, $.alias_name),
      )),
    ),

    instance_variables_section: $ => seq(
      $.instance_variables_section_statement,
      optional($.instance_variables_section_statement_body),
      $.end_variables_section,
    ),

    instance_variables_section_statement: $ => seq(
      $.type_keyword,
      $.variables_keyword,
    ),

    instance_variables_section_statement_body: $ => repeat1(choice(
      $.access_section,
      $.instance_variable_declaration
    )),

    access_section: $ => seq(
      $.access_modifier,
      ":",
    ),

    instance_variable_declaration: $ => seq(
      // optional($.constant_keyword), TODO
      optional($.access_modifier),
      optional($.readacess_modifier),
      optional($.writeaccess_modifier),
      $.local_variable_declaration,
    ),

    event_definition: $ => seq(
      $.event_definition_statement,
      optional(alias($.scriptable_block, $.event_definition_block)),
      $.event_definition_statement_end,
    ),

    event_definition_statement: $ => seq(
      $.event_declaration,
      $.statement_separation,
    ),

    event_definition_statement_end: $ => seq(
      $.end_keyword,
      $.event_keyword,
    ),

    on_event_definition: $ => seq(
      $.on_event_definition_statement,
      optional(alias($.scriptable_block, $.on_event_definition_block)),
      $.on_event_definition_statement_end,
    ),

    on_event_definition_statement: $ => seq(
      $.on_keyword,
      alias($.identifier, $.class_name),
      ".",
      choice($.create_keyword, $.destroy_keyword)
    ),

    on_event_definition_statement_end: $ => seq($.end_keyword, $.on_keyword),

    structure_definition: $ => seq(
      $.structure_definition_statement,
      optional($.structure_definition_body),
      $.end_type_declaration_statement,
    ),

    structure_definition_statement: $ => seq(
      optional($.global_keyword),
      $.type_keyword,
      alias($.identifier, $.structure_name),
      $.from_keyword,
      caseInsensitiveAlias("structure"),
    ),

    structure_definition_body: $ => repeat1($.structure_field),

    structure_field: $ => seq(
      $.type,
      alias($.identifier, $.field_name),
      optional($.array_suffix),
      optional($.structure_field_comment)
    ),

    end_type_declaration_statement: $ => seq($.end_keyword, $.type_keyword),

    forward_function_prototypes: $ => seq(
      $.forward_function_prototypes_statement,
      repeat($.function_prototype),
      $.end_function_prototypes_statement,
    ),

    forward_function_prototypes_statement: $ => seq($.forward_keyword, $.prototypes_keyword),

    end_function_prototypes_statement: $ => seq($.end_keyword, $.prototypes_keyword),

    event_declaration: $ => seq(
      $.event_keyword,
      optional(seq($.type_keyword, alias($.type, $.return_type))),
      alias($.identifier, $.event_name),
      optional($.parameter_list),
      optional($.throws_clause),
      optional($.event_id),
    ),

    event_id: $ => /pbm_[a-zA-Z_][a-zA-Z0-9_]*/,

    function_prototype: $ => choice(
      $._function_prototype,
      $._subroutine_prototype,
    ),

    _function_prototype: $ => seq(
      optional($.global_keyword),
      optional($.access_modifier),
      $.function_keyword,
      alias($.type, $.return_type),
      alias($.identifier, $.function_name),
      $.parameter_list,
      optional($.throws_clause),
    ),

    _subroutine_prototype: $ => seq(
      optional($.global_keyword),
      optional($.access_modifier),
      $.subroutine_keyword,
      alias($.identifier, $.subroutine_name),
      $.parameter_list,
      optional($.throws_clause),
    ),

    throws_clause: $ => seq(
      $.throws_keyword,
      commaSep1(alias($.identifier, $.throwable_name)),
    ),

    function_definition: $ => choice(
      $._function_definition,
      $._subroutine_definition,
    ),

    _function_definition: $ => seq(
      $.function_definition_statement,
      optional(alias($.scriptable_block, $.function_definition_block)),
      $.function_definition_statement_end,
    ),

    function_definition_statement: $ => seq($._function_prototype, $.statement_separation),

    function_definition_statement_end: $ => seq($.end_keyword, $.function_keyword),

    _subroutine_definition: $ => seq(
      $.subroutine_definition_statement,
      optional(alias($.scriptable_block, $.subroutine_definition_block)),
      $.subroutine_definition_statement_end,
    ),

    subroutine_definition_statement: $ => seq($._subroutine_prototype, $.statement_separation),

    subroutine_definition_statement_end: $ => seq($.end_keyword, $.subroutine_keyword),

    parameter_list: $ => seq($.open_parenthesis, commaSep($.parameter), $.close_parenthesis),

    parameter: $ => seq(
      optional(alias(choice(
        $.ref_keyword,
        $.readonly_keyword,
      ), $.parameter_pass_by_type)),
      $.type,
      alias($.identifier, $.parameter_name),
      optional($.array_parameter_declaration_suffix),
    ),

    local_variable_declaration: $ => seq(
      optional($.constant_keyword),
      alias($.type, $.variable_type),
      optional($.variable_precision),
      $.variable_declaration_list,
    ),

    variable_declaration_list: $ => commaSep1($.variable_declaration),

    variable_declaration: $ => seq(
      alias($.identifier, $.variable_name),
      optional($.array_suffix),
      optional(seq("=", alias($.expression, $.initial_value))),
    ),

    access_modifier: $ => choice(
      $.public_keyword,
      $.private_keyword,
      $.protected_keyword,
    ),

    statement: $ => choice(
      $.choose_statement,
      $.do_loop,
      $.for_loop,
      $.goto_label,
      $.if_statement,
      $.inline_if_statement,
      $.local_variable_declaration_statement,
      $.try_catch_statement,
      $.while_loop,
      $.inline_statement,
      /*
      $.sql_statement, TODO
      */
    ),

    inline_statement: $ => choice(
      $.assignment_statement,
      $.call_statement,
      $.continue_statement,
      $.create_statement,
      $.destroy_statement,
      $.exit_statement,
      $.goto_statement,
      $.halt_statement,
      $.return_statement,
      $.throw_statement,
      $.expression_statement,
    ),

    assignment_statement: $ => seq(
      alias($.expression, $.l_value),
      "=",
      alias($.expression, $.r_value),
    ),

    create_statement: $ => choice(
      seq(
        alias($.expression, $.l_value),
        "=",
        $.create_keyword,
        $.type,
      ),
      seq(
        alias($.expression, $.l_value),
        "=",
        $.create_keyword,
        $.using_keyword,
        alias($.expression, $.dynamic_type),
      ),
    ),

    destroy_statement: $ => choice(
      seq($.destroy_keyword, $.open_parenthesis, alias($.expression, $.variable_name), $.close_parenthesis),
      seq($.destroy_keyword, alias($.expression, $.variable_name)),
    ),

    return_statement: $ => prec.left(seq(
      $.return_keyword,
      optional(alias($.expression, $.return_value)),
    )),

    type: $ => choice(
      $.primitive_type,
      $.identifier,
    ),

    integer_literal: _ => /\d+/,
    string_literal: $ => choice(
      seq($.double_quote, alias(repeat(token.immediate(prec(1, choice(/[^"\\]/, /\\./, /~"/)))), $.string_content), $.double_quote),
      seq($.single_quote, alias(repeat(token.immediate(prec(1, choice(/[^'\\]/, /\\./, /~'/)))), $.string_content), $.single_quote),
    ),

    boolean_literal: $ => choice(
      $.true_keyword,
      $.false_keyword,
    ),

    primitive_type: _ => choice(
      caseInsensitiveAlias("blob"),
      caseInsensitiveAlias("boolean"),
      caseInsensitiveAlias("byte"),
      caseInsensitiveAlias("char"),
      caseInsensitiveAlias("character"),
      caseInsensitiveAlias("date"),
      caseInsensitiveAlias("datetime"),
      caseInsensitiveAlias("decimal"),
      caseInsensitiveAlias("dec"),
      caseInsensitiveAlias("double"),
      caseInsensitiveAlias("integer"),
      caseInsensitiveAlias("int"),
      caseInsensitiveAlias("longlong"),
      caseInsensitiveAlias("long"),
      caseInsensitiveAlias("real"),
      caseInsensitiveAlias("string"),
      caseInsensitiveAlias("time"),
      caseInsensitiveAlias("unsignedinteger"),
      caseInsensitiveAlias("unsignedint"),
      caseInsensitiveAlias("uint"),
      caseInsensitiveAlias("unsignedlong"),
      caseInsensitiveAlias("ulong"),
      caseInsensitiveAlias("any"),
    ),

    open_parenthesis: _ => "(",
    close_parenthesis: _ => ")",
    double_quote: _ => "\"",
    statement_separation: _ => ";",

    public_keyword: _ => reservedWord("public"),
    private_keyword: _ => reservedWord("private"),
    constant_keyword: _ => reservedWord("constant"),
    create_keyword: _ => reservedWord("create"),
    destroy_keyword: _ => reservedWord("destroy"),
    end_keyword: _ => reservedWord("end"),
    event_keyword: _ => reservedWord("event"),
    forward_keyword: _ => reservedWord("forward"),
    from_keyword: _ => reservedWord("from"),
    function_keyword: _ => reservedWord("function"),
    global_keyword: _ => reservedWord("global"),
    library_keyword: _ => reservedWord("library"),
    on_keyword: _ => reservedWord("on"),
    prototypes_keyword: _ => reservedWord("prototypes"),
    return_keyword: _ => reservedWord("return"),
    shared_keyword: _ => reservedWord("shared"),
    subroutine_keyword: _ => reservedWord("subroutine"),
    this_keyword: _ => reservedWord("this"),
    throws_keyword: _ => reservedWord("throws"),
    true_keyword: _ => reservedWord("true"),
    type_keyword: _ => reservedWord("type"),
    variables_keyword: _ => reservedWord("variables"),
    within_keyword: _ => reservedWord("within"),
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9\-_$#%]*/,

    line_comment: _ => seq("//", token.immediate(prec(1, /.*/))),
